--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -8,7 +8,7 @@
   position: absolute;
   height: 2px;
   background-color: #333;
-  z-index: 1;
+  /* z-index: 1; */
   transition: "none";
 }
 
@@ -184,7 +184,7 @@
   position: absolute;
   height: 2px;
   background-color: #333;
-  z-index: 1;
+  /* z-index: 1; */
   transition: "none";
 }
 
