--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -19,6 +19,7 @@
   width: 2px;
   height: 10px;
   background-color: #8BB6C2;
+  background-color: #8BB6C2;
 }
 
 .connection-line::before {
@@ -63,6 +64,8 @@
   position: absolute;
   width: 4px;
   background-color: #8BB6C2;
+  width: 4px;
+  background-color: #8BB6C2;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -96,15 +99,12 @@
   padding: 10px;
   min-width: 160px;
   min-width: 160px;
+  min-width: 160px;
   border-style: solid;
-  border-width: 1px;
   border-width: 1px;
   border-radius: 11px;
   border-width: 1px;
   min-height: 270px;
-  border-color: #8BB6C2;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-
   border-color: #8BB6C2;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 
@@ -123,10 +123,8 @@
 .add-house,
 .add-transformer {
   /* background-color: #f0f0f0;
-  /* background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 50%;
-  width: 80px;
   width: 80px;
   height: 30px;
   display: flex;
@@ -136,30 +134,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer; */
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer; 
-  background-color:white;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 18px;
-  height: 35px;
-  width: 85px;
-  font-size: 1.875rem;  
-border-color: #D59805;
-color: #FCB712; 
-  cursor: pointer; 
-  background-color:white;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 18px;
-  height: 35px;
-  width: 85px;
-  font-size: 1.875rem;  
-border-color: #D59805;
-color: #FCB712; 
+  cursor: pointer;
 }
 
 .add-transformer {
@@ -169,8 +148,6 @@ color: #FCB712;
 }
 
 .icon {
-  width: 40px;
-  height: 40px;
   width: 40px;
   height: 40px;
   display: inline-block;
@@ -190,7 +167,6 @@ color: #FCB712;
 
 .house.green {
   background-color: #4caf50;
-  height: 50px;
   height: 50px;
 }
 .house.orange {
@@ -234,7 +210,6 @@ color: #FCB712;
 .sub-connection-line::after {
   content: "";
   position: absolute;
-  width: 4px;
   width: 4px;
   height: 10px;
   background-color: #8BB6C2;
