--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -95,11 +95,16 @@
   margin-top: 10px;
   padding: 10px;
   min-width: 160px;
+  min-width: 160px;
   border-style: solid;
+  border-width: 1px;
   border-width: 1px;
   border-radius: 11px;
   border-width: 1px;
   min-height: 270px;
+  border-color: #8BB6C2;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+
   border-color: #8BB6C2;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 
@@ -118,8 +123,10 @@
 .add-house,
 .add-transformer {
   /* background-color: #f0f0f0;
+  /* background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 50%;
+  width: 80px;
   width: 80px;
   height: 30px;
   display: flex;
@@ -129,6 +136,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer; 
+  background-color:white;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 18px;
+  height: 35px;
+  width: 85px;
+  font-size: 1.875rem;  
+border-color: #D59805;
+color: #FCB712; 
   cursor: pointer; 
   background-color:white;
   border-style: solid;
@@ -150,6 +171,8 @@ color: #FCB712;
 .icon {
   width: 40px;
   height: 40px;
+  width: 40px;
+  height: 40px;
   display: inline-block;
 }
 
@@ -167,6 +190,7 @@ color: #FCB712;
 
 .house.green {
   background-color: #4caf50;
+  height: 50px;
   height: 50px;
 }
 .house.orange {
@@ -210,6 +234,7 @@ color: #FCB712;
 .sub-connection-line::after {
   content: "";
   position: absolute;
+  width: 4px;
   width: 4px;
   height: 10px;
   background-color: #8BB6C2;
