--- a/network-topology/src/components/Breadcrumb.css
+++ b/network-topology/src/components/Breadcrumb.css
@@ -1,9 +1,22 @@
+.breadcrumb-container {
+    display: flex;
+    align-items: center;
+}
+
+.breadcrumb-item {
+    flex: 0 0 170px;
+    text-align: center;
+    padding: 10px 8px;
+    z-index: 1;
+    margin: 0;
+    border-radius: 1px;
+}
+
 .breadcrumb-triangle {
     width: 0;
     height: 0;
-    position: absolute;
-    margin-left: 154px;
-    border-top: 22.95px solid transparent;
-    border-bottom: 22.95px solid transparent;
-    border-left: 22.95px solid; /* Change this color to match the next item's background */
+    border-top: 22px solid transparent;
+    border-bottom: 22px solid transparent;
+    border-left: 22px solid;
+    z-index: 2;
 }
