--- a/network-topology/src/components/Breadcrumb.css
+++ b/network-topology/src/components/Breadcrumb.css
@@ -12,6 +12,15 @@
     border-radius: 1px;
 }
 
+.breadcrumb-item-small {
+    flex: 0 0 140px;
+    text-align: center;
+    padding: 8px 8px;
+    z-index: 1;
+    margin: 0;
+    border-radius: 1px;
+}
+
 .breadcrumb-triangle {
     width: 0;
     height: 0;
@@ -20,4 +29,3 @@
     border-left: 22px solid;
     z-index: 2;
 }
-  
