--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -51,7 +51,7 @@
 .transformer-header {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   margin-bottom: 10px;
   position: relative;
   flex-direction: column;
@@ -92,25 +92,27 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  margin-top: 10px;
-  padding: 10px;
+  margin-top: 5px;
+  padding: 20px;
   min-width: 160px;
   border-style: solid;
-  border-width: 1px;
+  border-width: 0.8px;
   border-radius: 11px;
   border-width: 1px;
   min-height: 270px;
-  border-color: #8BB6C2;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border-color:  rgba(77, 120, 132, 0.4);
+
+  
 
 }
 
 .house-item {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 20px;
   position: relative;
   margin-bottom: 10px;
+
 }
 
 
@@ -141,6 +143,7 @@ border-color: #D59805;
 color: #FCB712; 
 }
 
+
 .add-transformer {
   align-self: flex-start;
   margin-top: 10px;
@@ -167,8 +170,8 @@ color: #FCB712;
 }
 
 .icon {
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 32px;
   display: inline-block;
 }
 
@@ -208,6 +211,7 @@ color: #FCB712;
   background-color: white;
   min-width: 200px;
   gap: 1px;
+  margin-top: -10px;
 }
 
 .transformers-column {
@@ -258,6 +262,7 @@ color: #FCB712;
 
 .house-item:hover .house-actions {
   display: flex;
+  
 }
 
 .house-actions button {
@@ -265,6 +270,7 @@ color: #FCB712;
   padding: 2px 5px;
   font-size: 12px;
   cursor: pointer;
+
 }
 .transformer-wrapper {
   display: flex;
@@ -285,23 +291,29 @@ color: #FCB712;
 .context-menu {
   position: absolute;
   background: white;
+  top: 60px;
   border: 1px solid #908B8B;
   z-index: 1000;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+
 }
 
 .context-menu button {
   display: block;
   width: 100%;
-  padding: 5px 10px;
+  padding: 8px 40px 8px 24px;
   background: none;
   border: none;
   text-align: left;
   cursor: pointer;
+  font-weight: 200;
+  font-size: 14px;
+
 }
 
 .context-menu button:hover {
   background: #EFEFEF;
+  border-radius: 10px;
 }
 
