refined css for breadcrumb and buttons

--- a/network-topology/src/components/Breadcrumb.css
+++ b/network-topology/src/components/Breadcrumb.css
@@ -2,6 +2,7 @@
     width: 750px;
     max-width: 750px;
     overflow-x: scroll;
+    padding-bottom: 8px;
 }
 
 .breadcrumb-wrapper::-webkit-scrollbar {
