--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -88,12 +88,13 @@
 }
 
 .houses-column {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   margin-top: 5px;
-  padding: 20px;
+  padding: 20px 20px 50px 20px;
   min-width: 160px;
   border-style: solid;
   border-width: 0.8px;
@@ -101,9 +102,6 @@
   border-width: 1px;
   min-height: 270px;
   border-color:  rgba(77, 120, 132, 0.4);
-
-  
-
 }
 
 .house-item {
@@ -112,10 +110,7 @@
   gap: 20px;
   position: relative;
   margin-bottom: 10px;
-
 }
-
-
 
 .add-house,
 .add-transformer {
@@ -137,12 +132,11 @@
   border-width: 1px;
   border-radius: 18px;
   height: 35px;
-  width: 85px;
+  width: 90px;
   font-size: 1.875rem;  
-border-color: #D59805;
-color: #FCB712; 
+  border-color: #D59805;
+  color: #FCB712; 
 }
-
 
 .add-transformer {
   align-self: flex-start;
