--- a/network-topology/src/components/NetworkGraph.css
+++ b/network-topology/src/components/NetworkGraph.css
@@ -139,9 +139,12 @@
 }
 
 .add-transformer {
+  display: flex;
+  width: 90px;
   align-self: flex-start;
   margin-top: 10px;
   position: relative;
+
 }
 
 .add-transformer-empty-grid{
@@ -164,13 +167,18 @@
 }
 
 .icon {
-  width: 100%;
-  height: 32px;
+  width: 42px;
+  height: 40px;
   display: inline-block;
 }
 
 .transformer.black {
   background-color: black;
+}
+.green-transformer-icon {
+  width:55px;
+  height: 52px;
+  margin-bottom: -10px;
 }
 
 .house.black {
