load builder UI complete

--- a/network-topology/src/LoadProfile/LoadBuilder.css
+++ b/network-topology/src/LoadProfile/LoadBuilder.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 /* grid container */
 .container {
     text-align: center;
@@ -17,26 +23,33 @@ li{
     grid-column: 1 / 7;
 }
 
-.nav ul {
+.nav > ul {
     display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 2fr 1fr;
 }
 
 .nav li {
     list-style: none;
-    margin: 4px;
-    padding: 4px;
 }
 
 .heading {
-    grid-column: 4 / 5;
+    grid-column: 2 / 5;
+    font-size: 17px;
+    white-space: nowrap;
 }
 
 .watts {
     grid-column: 5 / 6;
+    font-size: 17px;
 }
 
 .reset-profile {
     grid-column: 6 / 7;
+    border: 1px solid #FC4C02;
+    color: #FC4C02;
+    border-radius: 50px;
+    font-size: 13px;
+    font-weight: 500;
 }
 
 /* table */
@@ -56,6 +69,8 @@ li{
 
 .device-type-column{
     grid-column: 1 / 2;
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
 }
 
 .rating-column{
@@ -76,4 +91,32 @@ li{
 
 .action-column{
     grid-column: 6 / 7;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+}
+
+.delete-button{
+    color: #FD6222;
+}
+
+.add-button{
+    opacity: 50%;
+}
+
+.add-text{
+    color: #204A56;
+}
+
+/* bottom buttons */
+
+.bottom-buttons > li  button, input, select {
+    border: 1px solid #1A5A6C;
+    color: #1A5A6C;
+    border-radius: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.enter-button{
+    width: 70%;
 }
