--- a/network-topology/src/components/Breadcrumb/Breadcrumb.css
+++ b/network-topology/src/components/Breadcrumb/Breadcrumb.css
@@ -32,7 +32,7 @@
     z-index: 2;
     margin: 0;
     border-radius: 1px;
-    clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%, 0% 0%);
+    clip-path: polygon(0px 0px, calc(100% - 10px) 0px, 100% 50%, calc(100% - 10px) 100%, 0px 100%, 0px 0px);
 }
 
 .breadcrumb-item:nth-child(1){
